--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-mdl": "^2.1.0",
     "react-redux": "^7.2.0",
     "react-redux-loading": "^4.6.1",
+    "react-redux-loading-bar": "^4.6.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
